<resources>
    <string name="app_name">Suitmedia_Mobile_Intern</string>
    <string name="name">Name</string>
    <string name="palindrome">Palindrome</string>
    <string name="check">CHECK</string>
    <string name="next">NEXT</string>
    <string name="profile">Profile</string>
    <string name="welcome">Welcome</string>
    <string name="john_doe">John Doe</string>
    <string name="selected_user_name">Selected User Name</string>
    <string name="choose_a_user">Choose a User</string>
    <string name="firstname_lastname">Firstname Lastname</string>
    <string name="email_email_com">EMAIL@EMAIL.COM</string>
    <string name="second_screen">Second Screen</string>
    <string name="third_screen">Third Screen</string>
    <string name="screen_name">Screen Name</string>
    <string name="empty_data">EMPTY DATA</string>

</resources>