<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ui.first.FirstScreenActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="116dp"
        android:layout_height="116dp"
        android:layout_marginTop="186dp"
        android:background="@drawable/profile"
        android:contentDescription="@string/profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/nameET"
        android:layout_width="310dp"
        android:layout_height="47dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="51dp"
        android:layout_marginEnd="33dp"
        android:background="@drawable/rounded_corner_et"
        android:fontFamily="@font/poppins_medium"
        android:hint="@string/name"
        android:paddingStart="20dp"
        android:singleLine="true"
        android:textColorHint="@color/gray_36"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/palindromeET"
        android:layout_width="310dp"
        android:layout_height="47dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/rounded_corner_et"
        android:fontFamily="@font/poppins_medium"
        android:hint="@string/palindrome"
        android:inputType="text"
        android:paddingStart="20dp"
        android:singleLine="true"
        android:textColorHint="@color/gray_36"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/nameET"
        app:layout_constraintTop_toBottomOf="@+id/nameET" />

    <Button
        android:id="@+id/checkBtn"
        android:layout_width="310dp"
        android:layout_height="41dp"
        android:layout_marginTop="45dp"
        android:background="@drawable/rounded_corner_btn"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/check"
        android:textSize="14sp"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/palindromeET" />

    <Button
        android:id="@+id/nextBtn"
        android:layout_width="310dp"
        android:layout_height="41dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/rounded_corner_btn"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/next"
        android:textSize="14sp"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>