<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.second.SecondScreenActivity">

    <include
        android:id="@+id/toolbar_screen"
        layout="@layout/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcomeTV"
        android:layout_width="350dp"
        android:layout_height="36dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="13dp"
        android:fontFamily="@font/poppins_regular"
        android:gravity="center_vertical"
        android:text="@string/welcome"
        android:textColor="@color/dark_100"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_screen" />

    <TextView
        android:id="@+id/nameTV"
        android:layout_width="338dp"
        android:layout_height="36dp"
        android:layout_marginTop="35dp"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="center_vertical"
        android:text="@string/john_doe"
        android:textColor="@color/dark_100"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/welcomeTV"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_screen" />

    <TextView
        android:id="@+id/usernameTV"
        android:layout_width="303dp"
        android:layout_height="36dp"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="37dp"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="center"
        android:text="@string/selected_user_name"
        android:textColor="@color/dark_100"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/chooseBtn"
        android:layout_width="310dp"
        android:layout_height="41dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/rounded_corner_btn"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/choose_a_user"
        android:textAllCaps="false"
        android:textSize="14sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/usernameTV"
        app:layout_constraintStart_toStartOf="@+id/usernameTV" />

</androidx.constraintlayout.widget.ConstraintLayout>